[gd_scene load_steps=7 format=3 uid="uid://bys134k48qy18"]

[ext_resource type="Script" uid="uid://budqo8ehjthex" path="res://scripts/end_screen.gd" id="1_jrx8a"]
[ext_resource type="FontFile" uid="uid://bxcm7p0r1l0ke" path="res://CustomResource/m3x6.ttf" id="2_3gukv"]
[ext_resource type="PackedScene" uid="uid://y8buv1lbsbcc" path="res://Card/CardUI/CardUI.tscn" id="3_jh5rx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ee4bf"]
bg_color = Color(0.39127728, 0.65906435, 0.61303407, 1)

[sub_resource type="Theme" id="Theme_62e2m"]
default_font = ExtResource("2_3gukv")
default_font_size = 0

[sub_resource type="Theme" id="Theme_qtu10"]
default_font = ExtResource("2_3gukv")

[node name="EndScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jrx8a")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ee4bf")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="ScoreLabel" type="Label" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_3gukv")
text = "234234324"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(300, 70)
layout_mode = 2
size_flags_horizontal = 4
horizontal_scroll_mode = 3
vertical_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer/ScrollContainer"]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Deck" type="HBoxContainer" parent="Panel/VBoxContainer/ScrollContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 74
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 0.7

[node name="NameLabel" type="Label" parent="Panel/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_3gukv")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(50, 70)
layout_mode = 2
size_flags_horizontal = 4
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="Description" type="Label" parent="Panel/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(66, 0)
layout_mode = 2
size_flags_horizontal = 4
theme = SubResource("Theme_62e2m")
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1
autowrap_mode = 2

[node name="SelectedSlot" type="Control" parent="Panel/VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 55)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="CardUI" parent="Panel/VBoxContainer/MarginContainer/HBoxContainer/SelectedSlot" instance=ExtResource("3_jh5rx")]
layout_mode = 0

[node name="PlayButton" type="Button" parent="Panel/VBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 1.95
theme = SubResource("Theme_qtu10")
text = "Play"
